Added warning class

--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
 .invisible {
     visibility  : hidden;
 }
+.warning {
+    color       : red;
+}
 ::selection {
     background  : green;
 }
